fix for background not expanding and hero image on safari

--- a/frontend/src/styles/style.styl
+++ b/frontend/src/styles/style.styl
@@ -4,7 +4,7 @@
 $cdn = {
   assets: "https://static.redsift.io/assets/sifts/sift-tldr"
 };
-$enable-webp = true;
+$enable-webp = false;
 
 
 .-bg-tldr
@@ -59,6 +59,7 @@ rs-hero > *
   border: 1px solid #D7D6D6;
   margin-bottom: 1em;
   padding: 0.5em;
+  height: 100%;
 
 .card:last-child
   margin-bottom: 0;
